--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,3 +1,5 @@
+import { Callout } from 'nextra/components'
+
 ---
 title: "Red Teaming Knowledge Base"
 description: "Operational playbooks, techniques, and references for realistic Red Team operations."
