--- a/pages/RTW/act.mdx
+++ b/pages/RTW/act.mdx
@@ -1,45 +1,4 @@
 ---
-title: "About RTW"
-description: "Rédaction Keystone"
+title: "Act Phase"
+description: "Red Teaming Methodology - Act Phase"
 ---
-import { Callout } from 'nextra/components'
-
-# About RTW
-
-## Introduction
-**RedTeamer.wiki** is a knowledge and reference project dedicated to making the concepts, methodologies, and practices of Red Teaming accessible to a wide audience of security professionals.
-
-The main objective is to **share, document, and propagate** the notion of Red Teaming, while clearly explaining its differences from penetration testing and vulnerability scanning.  
-- **Vulnerability Assessment** → Focus on identifying flaws.  
-- **Penetration Testing** → Focus on exploiting those flaws.  
-- **Red Teaming** → Emulates real-world threat actors to test people, processes, and technology under realistic conditions.
-
-This project aims to:
-- Provide **technical and theoretical support** for cybersecurity experts.
-- Serve as a **practical guide** for structuring Red Team engagements.
-- Act as a **knowledge repository** (*paper keep memory*) to preserve lessons learned and best practices.
-
----
-
-## Legal Notice
-<Callout type="warning">
-
-All information, techniques, and methodologies described in **RedTeamer.wiki** are intended **solely for authorized and ethical use** in professional contexts such as authorized security testing, training, and research.
-
-**RedTeamer.wiki is not responsible for any misuse** of the provided content. Applying these techniques without explicit permission from the target owner is illegal and punishable by law in most jurisdictions.
-</Callout>
-
----
-
-## What You Will Find Here
-- A **brief history** of the project and its role in today’s cybersecurity landscape.
-- The **scope of coverage** — from planning to execution, reporting, and TTP cataloging.
-- An introduction to the **core methodology**: *Get In*, *Stay In*, *Act*.
-- How to **contribute** or suggest improvements to the knowledge base.
-
----
-
-## Related Pages
-- [Core Methodology](./methodology)
-- [RT vs Pentest vs Vulnerability Assessment](./differences)
-- [Engagement Models & ROE](./engagement-models)
