--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,3 +1,8 @@
+---
+title: About RTW — Red Teaming Methodology & Tactics
+description: RedTeamer.wiki presents the Get In, Stay In, Act methodology for realistic Red Team operations—covering planning, adversary emulation, OPSEC, persistence, lateral movement, exfiltration, and reporting.
+---
+
 import { Callout } from 'nextra/components'
 import ThemedImage from '@/components/ThemedImage'
 import Image from 'next/image'
