add stay in content

--- a/pages/RTW/index.mdx
+++ b/pages/RTW/index.mdx
@@ -3,6 +3,10 @@ title: Red Teaming Methodology (RTW)
 description: Overview of the RTW methodology — Get In, Stay In, Act.
 ---
 
+import { Callout } from 'nextra/components'
+import ThemedImage from '@/components/ThemedImage'
+import Image from 'next/image'
+
 # RTW Methodology
 
 The **RedTeamer.wiki methodology (RTW)** is built around three fundamental principles that reflect the operational lifecycle of real-world adversaries:
@@ -13,6 +17,13 @@ The **RedTeamer.wiki methodology (RTW)** is built around three fundamental princ
 
 This model distills the essence of Red Teaming: not just exploiting vulnerabilities, but simulating persistent, realistic, and goal-oriented adversary behavior.
 
+<ThemedImage
+  alt="RedTeamers banner"
+  darkSrc="/images/methodologyb.png"
+  lightSrc="/images/methodologyw.png"
+  width={1200}
+  height={360}
+/>
 ---
 
 ## Why This Model?
