--- a/pages/RTW/get_in.mdx
+++ b/pages/RTW/get_in.mdx
@@ -7,7 +7,7 @@ import { Callout } from 'nextra/components'
 import ThemedImage from '@/components/ThemedImage'
 import Image from 'next/image'
 
-# Red Teaming – The "Get In" Phase
+# The "Get In" Phase
   
 This article explores the theoretical foundations of the **Get In** phase, which represents the critical step of **initial access**.
 
