--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -12,6 +12,7 @@ import Image from 'next/image'
 ## Introduction
 **RedTeamer.wiki** is a knowledge and reference project dedicated to making the concepts, methodologies, and practices of Red Teaming accessible to a wide audience of security professionals.
 
+![RedTeamer.Wiki Logo](/redteamer_logo.png)
 
 The main objective is to **share, document, and propagate** the notion of Red Teaming, while clearly explaining its differences from penetration testing and vulnerability scanning.  
 
